fixed deprecated use off Class.newInstance